Delete library multicast_communication from project. Add multicast_communication library from task 6.
Signed-off-by: Serg Brych <sbrych@gmail.com>

--- a/solutions/serg_brych/7/tasks/sources/minute_calculator/CMakeLists.txt
+++ b/solutions/serg_brych/7/tasks/sources/minute_calculator/CMakeLists.txt
@@ -6,4 +6,4 @@ find_package( Boost ${SEARCH_PARAMETERS} COMPONENTS
 	chrono
 )
 
-compile_project( ${module_name} "*.cpp" "*.h" STATIC libraries Boost multicast_communication)
+compile_project( ${module_name} "*.cpp" "*.h" STATIC libraries Boost )
