Add first test for module minute_market_data_tests. Create data_receiver application.
Signed-off-by: Serg Brych <sbrych@gmail.com>

--- a/solutions/serg_brych/7/tasks/tests/minute_market_data_tests/CMakeLists.txt
+++ b/solutions/serg_brych/7/tasks/tests/minute_market_data_tests/CMakeLists.txt
@@ -12,6 +12,6 @@ find_package( multicast_communication ${SEARCH_PARAMETERS} COMPONENTS
 	multicast_communication
 )
 
-compile_project( ${tests_name} "*.cpp" "*.h" BINARY tests ${module_name} Boost multicast_communication minute_calculator)
+compile_project( ${tests_name} "*.cpp" "*.h" BINARY tests ${module_name} Boost multicast_communication minute_calculator minute_market_data )
 register_test( ${tests_name} 60 40 )
 
