--- a/solutions/serg_brych/7/tasks/sources/data_receiver/CMakeLists.txt
+++ b/solutions/serg_brych/7/tasks/sources/data_receiver/CMakeLists.txt
@@ -7,5 +7,9 @@ find_package( Boost ${SEARCH_PARAMETERS} COMPONENTS
 	regex
 )
 
-compile_project( ${module_name} "*.cpp" "*.h" BINARY binaries multicast_communication Boost )
+find_package( multicast_communication ${SEARCH_PARAMETERS} COMPONENTS
+	multicast_communication
+)
+
+compile_project( ${module_name} "*.cpp" "*.h" BINARY binaries minute_market_data minute_calculator multicast_communication Boost )
 
