Add system_utilities using ts_queue. Implemented minute_calculator_accumulator.
Signed-off-by: Serg Brych <sbrych@gmail.com>

--- a/solutions/serg_brych/7/tasks/sources/data_receiver/CMakeLists.txt
+++ b/solutions/serg_brych/7/tasks/sources/data_receiver/CMakeLists.txt
@@ -11,5 +11,10 @@ find_package( multicast_communication ${SEARCH_PARAMETERS} COMPONENTS
 	multicast_communication
 )
 
-compile_project( ${module_name} "*.cpp" "*.h" BINARY binaries minute_market_data minute_calculator multicast_communication Boost )
+find_package( system_utilities ${SEARCH_PARAMETERS} COMPONENTS
+	ts_queue
+)
+
+
+compile_project( ${module_name} "*.cpp" "*.h" BINARY binaries minute_market_data minute_calculator multicast_communication system_utilities Boost )
 
