--- a/solutions/serg_brych/7/tasks/sources/minute_calculator/CMakeLists.txt
+++ b/solutions/serg_brych/7/tasks/sources/minute_calculator/CMakeLists.txt
@@ -4,6 +4,16 @@ find_package( Boost ${SEARCH_PARAMETERS} COMPONENTS
 	thread
 	date_time
 	chrono
+
 )
 
-compile_project( ${module_name} "*.cpp" "*.h" STATIC libraries Boost )
+find_package( system_utilities ${SEARCH_PARAMETERS} COMPONENTS
+	ts_queue
+)
+
+find_package( multicast_communication ${SEARCH_PARAMETERS} COMPONENTS
+	multicast_communication
+)
+
+
+compile_project( ${module_name} "*.cpp" "*.h" STATIC libraries Boost system_utilities multicast_communication)
