--- a/solutions/serg_brych/7/tasks/sources/minute_market_data/CMakeLists.txt
+++ b/solutions/serg_brych/7/tasks/sources/minute_market_data/CMakeLists.txt
@@ -6,8 +6,12 @@ find_package( Boost ${SEARCH_PARAMETERS} COMPONENTS
 	chrono
 )
 
+find_package( system_utilities ${SEARCH_PARAMETERS} COMPONENTS
+	ts_queue
+)
+
 find_package( multicast_communication ${SEARCH_PARAMETERS} COMPONENTS
 	multicast_communication
 )
 
-compile_project( ${module_name} "*.cpp" "*.h" STATIC libraries Boost multicast_communication minute_calculator )
+compile_project( ${module_name} "*.cpp" "*.h" STATIC libraries Boost multicast_communication minute_calculator system_utilities )
