--- a/solutions/serg_brych/7/tasks/tests/minute_calculator_tests/CMakeLists.txt
+++ b/solutions/serg_brych/7/tasks/tests/minute_calculator_tests/CMakeLists.txt
@@ -8,6 +8,15 @@ find_package( Boost ${SEARCH_PARAMETERS} COMPONENTS
 	regex
 )
 
-compile_project( ${tests_name} "*.cpp" "*.h" BINARY tests ${module_name} Boost minute_calculator )
+
+find_package( system_utilities ${SEARCH_PARAMETERS} COMPONENTS
+	ts_queue
+)
+
+find_package( multicast_communication ${SEARCH_PARAMETERS} COMPONENTS
+	multicast_communication
+)
+
+compile_project( ${tests_name} "*.cpp" "*.h" BINARY tests ${module_name} Boost minute_calculator system_utilities multicast_communication )
 register_test( ${tests_name} 10 8 )
 
