--- a/solutions/ivan_sidarau/trade_processor_project/sources/common/CMakeLists.txt
+++ b/solutions/ivan_sidarau/trade_processor_project/sources/common/CMakeLists.txt
@@ -6,4 +6,4 @@ find_package( Boost ${SEARCH_PARAMETERS} COMPONENTS
 	chrono
 )
 
-compile_project( ${module_name} "*.cpp" "*.h" STATIC libraries common Boost)
+compile_project( ${module_name} "*.cpp" "*.h" STATIC libraries Boost)
