--- a/solutions/ivan_sidarau/trade_processor_project/tests/multicast_communication_tests/CMakeLists.txt
+++ b/solutions/ivan_sidarau/trade_processor_project/tests/multicast_communication_tests/CMakeLists.txt
@@ -2,8 +2,12 @@ find_package( Boost ${SEARCH_PARAMETERS} COMPONENTS
 	system
 	unit_test_framework
 	filesystem
+	date_time
+	regex
+	thread
+	chrono
 )
 
-compile_project( ${tests_name} "*.cpp" "*.h" BINARY tests ${module_name} Boost )
+compile_project( ${tests_name} "*.cpp" "*.h" BINARY tests ${module_name} common Boost )
 register_test( ${tests_name} 5 4 )
 
