--- a/solutions/ivan_sidarau/trade_processor_project/sources/market_data_receiver/CMakeLists.txt
+++ b/solutions/ivan_sidarau/trade_processor_project/sources/market_data_receiver/CMakeLists.txt
@@ -6,5 +6,13 @@ find_package( Boost ${SEARCH_PARAMETERS} COMPONENTS
 	chrono
 )
 
-compile_project( ${module_name} "*.cpp" "*.h" BINARY binaries common multicast_communication Boost )
+find_package( system_utilities ${SEARCH_PARAMETERS} COMPONENTS
+	ts_queue
+	logger
+	file_logger
+	queue_logger
+	task_processor
+)
+
+compile_project( ${module_name} "*.cpp" "*.h" BINARY binaries common multicast_communication system_utilities Boost )
 
