--- a/solutions/ivan_sidarau/trade_processor_project/sources/multicast_communication/CMakeLists.txt
+++ b/solutions/ivan_sidarau/trade_processor_project/sources/multicast_communication/CMakeLists.txt
@@ -6,4 +6,12 @@ find_package( Boost ${SEARCH_PARAMETERS} COMPONENTS
 	chrono
 )
 
-compile_project( ${module_name} "*.cpp" "*.h" STATIC libraries common Boost)
+find_package( system_utilities ${SEARCH_PARAMETERS} COMPONENTS
+	ts_queue
+	logger
+	file_logger
+	queue_logger
+	task_processor
+)
+
+compile_project( ${module_name} "*.cpp" "*.h" STATIC libraries common system_utilities Boost)
