--- a/solutions/ivan_sidarau/trade_processor_project/CMakeLists.txt
+++ b/solutions/ivan_sidarau/trade_processor_project/CMakeLists.txt
@@ -4,7 +4,7 @@ set( CMAKE_CONFIGURATION_TYPES ${CMAKE_BUILD_TYPE} CACHE STRING "Configurations"
 project( ${SOLUTION_NAME} )
 include( environment.cmake required )
 
-modules( common multicast_communication )
+modules( common multicast_communication minute_calculator )
 binaries( market_data_receiver )
 
 compile()
