adding mediator for minute_calculator

--- a/solutions/ivan_sidarau/trade_processor_project/CMakeLists.txt
+++ b/solutions/ivan_sidarau/trade_processor_project/CMakeLists.txt
@@ -5,6 +5,6 @@ project( ${SOLUTION_NAME} )
 include( environment.cmake required )
 
 modules( common multicast_communication minute_calculator )
-binaries( market_data_receiver )
+binaries( market_data_receiver minute_market_data )
 
 compile()
